--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Java Script - Main Page</title>
+    <link rel="icon" href="./assets/icons/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./components/styles/commonStyle.css">
 </head>
 <body>
