Terminada la clase práctica de DOM entendiendo el material teórico ahora puedo agregar nuevos conocimientos, el html ahora lo creo inyectando objetos dentro de los elementos moví el changeThemeColor dentro de functions y cree una tabla de usuarios, cambie el formato del json para que tome headers y valores correctamente.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./components/styles/commonStyle.css">
 </head>
 <body>
+  <div id="app"></div>
   <script type="module">
     import { renderLayout } from './components/styles/layout.js';
     renderLayout();
