--- a/pages/users/createUser.html
+++ b/pages/users/createUser.html
@@ -3,14 +3,14 @@
   <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>ABM - Usuarios</title>
-      <link rel="icon" href="./assets/icons/logo.ico" type="image/x-icon">
+      <title>Alta - Usuario</title>
+      <link rel="icon" href="../../assets/icons/logo.ico" type="image/x-icon">
   </head>
   <body>
     <div id="app"></div>
     <script type="module">
-      import { renderIndex } from './pages/index/renderIndex.js';
-      renderIndex();
+      import { renderCreateUser } from './renderCreateUser.js';
+      renderCreateUser();
     </script>
   </body>
 </html>
