--- a/pages/users/createUser.html
+++ b/pages/users/createUser.html
@@ -5,6 +5,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Alta - Usuario</title>
       <link rel="icon" href="../../assets/icons/logo.ico" type="image/x-icon">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
   <body>
     <div id="app"></div>
