--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <link rel="icon" href="./assets/icons/logo.ico" type="image/x-icon">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   </head>
   <body>
     <div id="app"></div>
